--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,11 +16,17 @@
   <svg version="1.1" id="metronome" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
   width="300" height="300" viewBox="0 0 200 200" style="enable-background:new 0 0 200 200;" xml:space="preserve">
     <style type="text/css">
-      .st0{fill:#F95428;}
-      .st1{fill:#808080;}
-      .st2{fill:#F7B239;}
-      .st3{fill:#4D4D4D;}
-      .st4{fill:#CC582F;}
+      .st0 { fill: #F95428; }
+      .st1 { fill: #808080; }
+      .st2 { fill: #F7B239; }
+      .st3 { fill: #4D4D4D; }
+      .st4 { fill: #CC582F; }
+      .st5 { font-family: 'Arial-BoldMT', Arial, sans-serif; }
+      .st6 { font-size: 25.7145px; }
+      .st7 { font-family: 'ArialMT', Arial, sans-serif; }
+      .st8 { font-size: 12.7612px; }
+      .st9 { font-family: 'Arial-ItalicMT', Arial, sans-serif; }
+      .st10 { font-size: 9.6645px; }
     </style>
     <polygon class="st0" points="132.8,19.6 98.7,27.2 67.3,19.6 100,0 "/>
     <polygon class="st1" points="148.4,105.8 132.8,19.6 67.3,19.6 45.1,142.1 89.7,142.1 110.4,142.1 112.2,142.1 154.9,142.1 "/>
@@ -43,6 +49,16 @@
       [style.transition]="'transform ' + tempoTime + 's cubic-bezier(0.42, 0, 0.58, 1)'"/>
     </g>
     <polygon class="st0" points="154.9,142.1 165.4,200 34.6,200 45.1,142.1 "/>
+    <text transform="matrix(1 0 0 1 85.5679 166.5312)"><tspan x="0" y="0" class="st5 st6">{{tempo}}</tspan><tspan x="0.5" y="11.7" class="st7 st8">BPM</tspan></text>
+    <text transform="matrix(1 0 0 1 45.0986 182.0137)"><tspan x="0" y="0" class="st9 st10">Volume:</tspan><tspan x="5.4" y="9.7" class="st5 st10">100%</tspan></text>
+    <text transform="matrix(1 0 0 1 124.1853 182.0137)"><tspan x="0" y="0" class="st9 st10">Beats:</tspan><tspan x="11" y="9.7" class="st5 st10">4</tspan></text>
   </svg>
+
+  <ion-range [(ngModel)]="tempo" min="40" max="240" (ionChange)="tempoChange()">
+    <ion-label slot="start">40</ion-label>
+    <ion-label slot="end">240</ion-label>
+  </ion-range>
+
+  <ion-label>Current value: {{ tempo }}</ion-label>
   
 </ion-content>
