--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -49,16 +49,43 @@
       [style.transition]="'transform ' + tempoTime + 's cubic-bezier(0.42, 0, 0.58, 1)'"/>
     </g>
     <polygon class="st0" points="154.9,142.1 165.4,200 34.6,200 45.1,142.1 "/>
-    <text transform="matrix(1 0 0 1 85.5679 166.5312)"><tspan x="0" y="0" class="st5 st6">{{tempo}}</tspan><tspan x="0.5" y="11.7" class="st7 st8">BPM</tspan></text>
-    <text transform="matrix(1 0 0 1 45.0986 182.0137)"><tspan x="0" y="0" class="st9 st10">Volume:</tspan><tspan x="5.4" y="9.7" class="st5 st10">100%</tspan></text>
-    <text transform="matrix(1 0 0 1 124.1853 182.0137)"><tspan x="0" y="0" class="st9 st10">Beats:</tspan><tspan x="11" y="9.7" class="st5 st10">4</tspan></text>
+    <text transform="matrix(1 0 0 1 85.5679 166.5312)" text-anchor="middle">
+      <tspan x="15" dy="0" class="st5 st6">{{tempo}}</tspan>
+      <tspan x="15" dy="1.2em" class="st7 st8">BPM</tspan>
+    </text>
+    <text transform="matrix(1 0 0 1 45.0986 182.0137)">
+      <tspan x="16" dy="0" class="st9 st10" text-anchor="middle">Volume:</tspan>
+      <tspan x="16" dy="1.2em" class="st5 st10" text-anchor="middle">{{volume}}%</tspan>
+    </text>
+    <text transform="matrix(1 0 0 1 124.1853 182.0137)">
+      <tspan x="15" dy="0" class="st9 st10" text-anchor="middle">Beats:</tspan>
+      <tspan x="15" dy="1.2em" class="st5 st10" text-anchor="middle">{{beats}}</tspan>
+    </text>
   </svg>
 
-  <ion-range [(ngModel)]="tempo" min="40" max="240" (ionChange)="tempoChange()">
-    <ion-label slot="start">40</ion-label>
-    <ion-label slot="end">240</ion-label>
-  </ion-range>
+  <ion-item class="slider">
+    <ion-label>BPM</ion-label>
+    <ion-range [(ngModel)]="tempo" min="40" max="240" (ionChange)="tempoChange()">
+      <ion-label slot="start">40</ion-label>
+      <ion-label slot="end">240</ion-label>
+    </ion-range>
+  </ion-item>
 
-  <ion-label>Current value: {{ tempo }}</ion-label>
-  
+  <ion-item class="slider">
+    <ion-label>Beats</ion-label>
+    <ion-range [(ngModel)]="beats" min="1" max="12">
+      <ion-label slot="start">1</ion-label>
+      <ion-label slot="end">12</ion-label>
+    </ion-range>
+  </ion-item>
+
+  <ion-item class="slider">
+    <ion-label>Volume</ion-label>
+    <ion-range [(ngModel)]="volume" min="0" max="100">
+      <ion-label slot="start">0</ion-label>
+      <ion-label slot="end">100</ion-label>
+    </ion-range>
+  </ion-item>
+
+  <ion-button (click)="pause()">Pause</ion-button>
 </ion-content>
