Dynamic button text change

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -87,5 +87,5 @@
     </ion-range>
   </ion-item>
 
-  <ion-button (click)="pause()">Pause</ion-button>
+  <ion-button (click)="pause()">{{buttonText}}</ion-button>
 </ion-content>
