A lot (mostly adding presets)
Added file reading, localstorage mock for browser testing

--- a/src/app/metronome/metronome.page.html
+++ b/src/app/metronome/metronome.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Metronome
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -88,4 +88,5 @@
   </ion-item>
 
   <ion-button (click)="pause()">{{buttonText}}</ion-button>
+  <ion-button (click)="addPreset()">{{buttonText}}</ion-button>
 </ion-content>
