--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,8 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .slider {
     width: 50%;
