Fix alert (todo)
Using AlertController for one page and ion-alert for the other, so have to unify

--- a/src/app/metronome/metronome.page.html
+++ b/src/app/metronome/metronome.page.html
@@ -91,13 +91,13 @@
   <ion-button id="present-alert">sds preset</ion-button>
 
   <ion-alert
-  trigger="present-alert"
-  header="Add New Preset"
-  message="Enter a name for your new preset:"
-  [inputs]="[
-    { name: 'name', type: 'text', placeholder: 'Preset Name' }
-  ]"
-  [buttons]="alertButtons">
-</ion-alert>
+    trigger="present-alert"
+    header="Add New Preset"
+    message="Enter a name for your new preset:"
+    [inputs]="[
+      { name: 'name', type: 'text', placeholder: 'Preset Name', value: ''}
+    ]"
+    [buttons]="alertButtons">
+  </ion-alert>
 
 </ion-content>
